# curlite

./: README.rst  azure-pipelines.yml  pyproject.toml
.github/workflows/: main.yml  test.yml
curlite/: LICENSE
tests/: test_lib.py
