[tool.poetry]
name = "curlite"
version = "0.1.7"
description = "Python wrapper for libcurl to make http requests in a more pythonic way"
authors = ["mohammed-workfellow <mohammed@workfellow.ai>"]
readme = "README.md"
packages = [{include = "curlite"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
