[tool.poetry]
name = "curlite"
version = "0.1.7"
description = "Python wrapper for libcurl to make http requests in a more pythonic way"
authors = ["mohammed-workfellow <mohammed@workfellow.ai>"]
readme = "README.rst"
packages = [{include = "curlite"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
